--- a/list.html
+++ b/list.html
@@ -98,221 +98,16 @@
     }
     </style>
 
-    <script>
-    window.console = window.console || function(t) {};
-    </script>
 
-    <script>
-    (function() {
-      /*
-      * Capture all errors for this pen
-      **/
-      window.onerror = function(/* message, file, line */) {
-        return true;
-      };
-
-      /*
-      * Capture and kill Web Audio and Speech
-      */
-      if (typeof (AudioContext) != "undefined" || typeof (webkitAudioContext) != "undefined") {
-        AudioContext = function() {
-          return false;
-        };
-
-        webkitAudioContext = function() {
-          return false;
-        };
-      }
-
-      if (typeof (mozAudioContext) != "undefined") {
-        mozAudioContext = function() {
-          return false;
-        };
-      }
-
-      if ("speechSynthesis" in window) {
-        window.speechSynthesis = {};
-      }
-      if ("speak" in speechSynthesis) {
-        speechSynthesis.speak = function() {
-          return false;
-        };
-      }
-
-      // Kill the browser asking for access to the video cam or audio
-      navigator.getUserMedia = function() {
-      };
-      navigator.mozGetUserMedia = function() {
-      };
-      navigator.webkitGetUserMedia = function() {
-      };
-      navigator.mediaDevices.getUserMedia = function() {
-      };
-
-
-      /**
-      * Capture and kill animations after X number of seconds
-      **/
-      var __animationDuration = 4000;
-      var __animationsTimedOut = false;
-      var __animationRequests = [];
-      var __requestAnimationFrame = false;
-      var __cancelAnimationFrame = false;
-      var x, i;
-
-      var vendorsReqestAnimationFrame = [
-        "requestAnimationFrame",
-        "mozRequestAnimationFrame",
-        "webkitRequestAnimationFrame"
-      ];
-
-      // find the browsers requestAnimationFrame and cancelAnimationFrame
-      for (x = 0; x < vendorsReqestAnimationFrame.length; x++) {
-        if (!__requestAnimationFrame) {
-          __requestAnimationFrame = window[vendorsReqestAnimationFrame[x]
-          ];
-        }
-      }
-
-      __cancelAnimationFrame = window.cancelAnimationFrame || window.mozCancelAnimationFrame;
-
-      // Wrap the requestAnimationFrame so we can stop it in the future
-      function __reqFrame(callback, element) {
-        // after the timeout we no longer take requests
-        var timerID;
-        if (__animationsTimedOut) {
-          return 0;
-        } else {
-          timerID = __requestAnimationFrame(callback, element);
-          __animationRequests.push(timerID);
-
-          return timerID;
-        }
-      }
-
-      for (x = 0; x < vendorsReqestAnimationFrame.length; x++) {
-        window[vendorsReqestAnimationFrame[x]] = __reqFrame;
-      }
-
-      // Cancel the animations after expiration
-      setTimeout(function() {
-        for (i = 0; i < __animationRequests.length; i++) {
-          __cancelAnimationFrame(__animationRequests[i]);
-        }
-
-        var ss = window.document.createElement("style");
-        ss.textContent = "*, *::before, *::after { animation-play-state: paused !important; }";
-        var ref = window.document.getElementsByTagName("script")[0];
-        ref.parentNode.insertBefore(ss, ref);
-
-        __animationsTimedOut = true;
-      }, __animationDuration, "push");
-
-      /**
-      * Capture setInterval and setTimeout to kill after X number of seconds
-      **/
-      window.setInterval = (function(oldSetInterval) {
-        var registered = [];
-
-        function f(a,b) {
-          // check if the time has expired,
-          // after __animationDuration expires don't take anymore setIntervals
-          if (this.timedOut) {
-            return 0;
-          } else {
-            return registered[ registered.length ] = oldSetInterval(a,b);
-          }
-        }
-
-        f.clearAll = function() {
-          var r;
-
-          while (r = registered.pop()) {
-            clearInterval( r );
-          }
-
-          this.timedOut = true;
-        };
-
-        f.timedOut = false;
-
-        return f;
-      }(window.setInterval));
-
-      window.setTimeout = (function(oldSetTimeout) {
-        var registered = [];
-
-        // because some of our timeouts may time out afterwards
-        // we want to make sure they know the secret sauce to still use
-        // setTimeout after the time has expired, thats why we have a
-        // third param
-        function f(a, b, push) {
-          // check if the time has expired,
-          // after __animationDuration expires don't take anymore requests
-          if (this.timedOut && typeof(push) == "undefined") {
-            return 0;
-          } else {
-            // If push is there, never clear that interval
-            // so never add it to the registry
-            if (push) {
-              return oldSetTimeout(a,b);
-            } else {
-              return registered[ registered.length ] = oldSetTimeout(a,b);
-            }
-          }
-        }
-
-        f.clearAll = function() {
-          var r;
-
-          while (r = registered.pop()) {
-            clearTimeout( r );
-          }
-
-          this.timedOut = true;
-        };
-
-        f.timedOut = false;
-
-        return f;
-      }(window.setTimeout));
-
-      setTimeout(function() {
-
-        setTimeout.clearAll();
-        setInterval.clearAll();
-
-        // Stop Web Animations API
-        // Idea from Gregor: https://github.com/CodePen/CodePen-Bug-Reporting-Only/issues/173#issuecomment-203443301
-        // Status as of August 2016:
-        //  Chrome = stops animations
-        //  Safari = doesn't support anyway
-        //  Firefox = doesn't stop them, but probably will someday? Doesn't error
-        if (document.timeline && typeof document.timeline.getAnimations === "function") {
-          document.timeline.getAnimations().map(function(animation) {
-            animation.pause();
-          });
-        }
-
-      }, __animationDuration, "push");
-
-    }());
-    </script>
-
-    <script>
-    if (document.location.search.match(/type=embed/gi)) {
-      window.parent.postMessage("resize", "*");
-    }
-    </script>
 </head>
 
 <body translate="no"  onload="_l='t';">
 
   <div id="users">
   <input class="search" placeholder="Search" />
-  <!-- <button class="sort" data-sort="kor">
-    한글명으로 정렬
-  </button> -->
+  <button class="sort" data-sort="kor">
+    가나다순 정렬
+  </button>
 
   <ul class="list">
     <li>
@@ -328,14 +123,72 @@
     <li>
       <h3 class="kor">M50</h3>
       <p class="chn">创意园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="创意园">한자복사</button>
     </li>
     <li>
       <h3 class="kor">관첸제</h3>
       <p class="chn">观前街</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="观前街">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">그린 파크</h3>
+      <p class="chn">生态园</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="生态园">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">난징루 보행 거리</h3>
+      <p class="chn">南京路步行街</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="南京路步行街">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">네이산 서점</h3>
+      <p class="chn">内山书店</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="内山书店">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">닝허루 거리</h3>
+      <p class="chn">凝和路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="凝和路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">다칭 우체국</h3>
+      <p class="chn">大清邮局</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="大清邮局">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">당 갤러리</h3>
+      <p class="chn">当代艺展画廊</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="当代艺展画廊">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">도시계획전시관</h3>
+      <p class="chn">上海都市规划展示馆</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="上海都市规划展示馆">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">동방명주</h3>
+      <p class="chn">东方明珠广播电视塔</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="东方明珠广播电视塔">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">둥타이루 골동품 시장</h3>
+      <p class="chn">东台路古玩市场</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="东台路古玩市场">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">둥핑루</h3>
+      <p class="chn">东平路</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="东平路">한자복사</button>
+    </li>
+    <li>
+      <h3 class="kor">둬룬루 문화 명인 거리</h3>
+      <p class="chn">多伦路文化名人街</p>
+      <button class="btnc" data-clipboard-action="copy" data-clipboard-text="多伦路文化名人街">한자복사</button>
     </li>
   </ul>
 
 </div>
+
 <!-- 텍스트 복사 -->
 <script src="js/clipboard.min.js"></script>
 <script>
@@ -348,87 +201,19 @@ clipboard.on('error', function(e) {
 });
 </script>
 <!-- 텍스트 복사 끝 -->
+
+<!-- 리스트 검색 -->
 <script src="js/list.min.js"></script>
-    <!-- <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script> -->
 
+<script>
+var options = {
+valueNames: [ 'kor', 'chn' ]
+};
 
-    <script>
-    var options = {
-    valueNames: [ 'kor', 'chn' ]
-    };
-
-    var userList = new List('users', options);
-    //# sourceURL=pen.js
-    </script>
-
-    <script style="display: none !important;">
-    (function() {
-
-    setTimeout(function() {
-      // If onload hasn't been called, stop all requests after 2 seconds
-      if (typeof(_l) == "undefined") {
-        if (window.stop !== undefined) window.stop();
-        else if (document.execCommand !== undefined) document.execCommand("Stop", false);
-      }
-    }, 2000, "push");
-
-    /*
-    * Capture and kill CSS animations after X number of seconds
-    */
-    function pauseAnimations() {
-      var body = document.getElementsByTagName("body")[0];
-
-      if (body.addEventListener) {
-        body.addEventListener("webkitAnimationStart", listener, false);
-        body.addEventListener("webkitAnimationIteration", listener, false);
-        body.addEventListener("animationstart", listener, false);
-        body.addEventListener("animationiteration", listener, false);
-      }
-    }
-
-    function listener(e) {
-
-      var targetEl;
-
-      if (e.type == "webkitAnimationStart" || e.type == "webkitAnimationIteration") {
-
-        targetEl = e.target;
-
-        setTimeout(function() {
-          targetEl.style.webkitAnimationPlayState = "paused";
-        }, __animationDuration, "push");
-
-      } else if (e.type == "animationstart" || e.type == "animationiteration") {
-
-        targetEl = e.target;
-
-        setTimeout(function() {
-          targetEl.style.MozAnimationPlayState = "paused";
-        }, __animationDuration, 'push');
-
-      }
-    }
-
-    pauseAnimations();
-
-    // Pause all audio elements, allow the audio/video
-    // elements to render before stopping them
-    function pauseElementTypes(type) {
-      for (var i = 0, els = document.getElementsByTagName(type); i < els.length; i++) {
-        els[i].pause();
-      }
-    }
-
-    // Wait until the elements have been created to pause them
-    setTimeout(function() {
-      pauseElementTypes("audio");
-      pauseElementTypes("video");
-    }, 100);
-
-  }());
-  </script>
-
-
+var userList = new List('users', options);
+//# sourceURL=pen.js
+</script>
+<!-- 리스트 검색 끝 -->
 
 </body>
 </html>
